--- a/.github/workflows/ci-test-frontend.yml
+++ b/.github/workflows/ci-test-frontend.yml
@@ -26,3 +26,6 @@ jobs:
 
       - run: npx run-p check lint
         working-directory: ./frontend
+
+      - run: npm run check test
+        working-directory: ./frontend
