--- a/.github/workflows/ci-test-frontend.yml
+++ b/.github/workflows/ci-test-frontend.yml
@@ -13,9 +13,8 @@ on:
       - 'frontend/**'
 
 jobs:
-  frontend-check:
+  frontend-dep:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v2
 
@@ -24,6 +23,11 @@ jobs:
       - run: npm ci --loglevel warn
         working-directory: ./frontend
 
+  frontend-check:
+    runs-on: ubuntu-latest
+    needs: frontend-dep
+
+    steps:
       - uses: actions/cache@v2
         with:
           path: ${{ github.workspace }}/frontend/node_modules/.cache
@@ -36,28 +40,16 @@ jobs:
 
   frontend-lint:
     runs-on: ubuntu-latest
+    needs: frontend-dep
 
     steps:
-      - uses: actions/checkout@v2
-
-      - uses: actions/setup-node@v1
-
-      - run: npm ci --loglevel warn
-        working-directory: ./frontend
-
       - run: npx run-p lint
         working-directory: ./frontend
 
   frontend-test:
     runs-on: ubuntu-latest
+    needs: frontend-dep
 
     steps:
-      - uses: actions/checkout@v2
-
-      - uses: actions/setup-node@v1
-
-      - run: npm ci --loglevel warn
-        working-directory: ./frontend
-
       - run: npm run test
         working-directory: ./frontend
