--- a/frontend/package.json
+++ b/frontend/package.json
@@ -74,6 +74,7 @@
     "caniuse-lite": "^1.0.30001118",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.0.3",
+    "coveralls": "^3.1.0",
     "cross-env": "^7.0.2",
     "css-loader": "^3.5.2",
     "document-register-element": "^1.14.3",
