--- a/.github/workflows/ci-test-frontend.yml
+++ b/.github/workflows/ci-test-frontend.yml
@@ -78,4 +78,4 @@ jobs:
         run: node node_modules/.bin/coveralls < coverage/lcov.info
         working-directory: ./frontend
         env:
-          COVERALLS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          COVERALLS_TOKEN: ${{ secrets.COVERALLS_TOKEN }}
